[gd_scene load_steps=114 format=3 uid="uid://0w05xcojxswa"]

[ext_resource type="Texture2D" uid="uid://yy70ouhyh0gx" path="res://assets/player/Idle.png" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://b26awmd5arvny" path="res://assets/player/MCattack.png" id="1_hqtel"]
[ext_resource type="Script" uid="uid://qx64p0kse4b" path="res://script/player.gd" id="1_sweqy"]
[ext_resource type="Texture2D" uid="uid://u21clsbodihd" path="res://assets/player/Execute.png" id="2_sweqy"]
[ext_resource type="Texture2D" uid="uid://dmrilovfjuld7" path="res://assets/player/damaged.png" id="3_b26j0"]
[ext_resource type="Texture2D" uid="uid://bf221ixspybcq" path="res://assets/player/walking.png" id="4_2hs0m"]
[ext_resource type="Texture2D" uid="uid://ehku72ddlp1n" path="res://assets/player/dead.png" id="4_n7ghd"]
[ext_resource type="Texture2D" uid="uid://2g655dnfvll4" path="res://assets/player/jump.png" id="6_nvl01"]
[ext_resource type="Texture2D" uid="uid://ck1htir50q7fd" path="res://assets/player/Fall.png" id="7_ivps1"]
[ext_resource type="AudioStream" uid="uid://ctr1txtavhpx4" path="res://Sound/maro-jump-sound-effect_1.mp3" id="10_n7ghd"]
[ext_resource type="FontFile" uid="uid://bnlkwk86tx4w1" path="res://font/Bruce Forever.ttf" id="11_nvl01"]

[sub_resource type="AtlasTexture" id="AtlasTexture_86rna"]
atlas = ExtResource("1_hqtel")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg1a7"]
atlas = ExtResource("1_hqtel")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob4mi"]
atlas = ExtResource("1_hqtel")
region = Rect2(2048, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax26h"]
atlas = ExtResource("1_hqtel")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh4g0"]
atlas = ExtResource("1_hqtel")
region = Rect2(1024, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgmjd"]
atlas = ExtResource("1_hqtel")
region = Rect2(2048, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_va2xi"]
atlas = ExtResource("1_hqtel")
region = Rect2(0, 2048, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ihbc"]
atlas = ExtResource("3_b26j0")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc53x"]
atlas = ExtResource("3_b26j0")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro7of"]
atlas = ExtResource("3_b26j0")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn2kn"]
atlas = ExtResource("4_n7ghd")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tmhn"]
atlas = ExtResource("4_n7ghd")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpvxe"]
atlas = ExtResource("4_n7ghd")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkf2u"]
atlas = ExtResource("2_sweqy")
region = Rect2(6144, 0, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7jk6"]
atlas = ExtResource("2_sweqy")
region = Rect2(0, 1024, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_feeoa"]
atlas = ExtResource("2_sweqy")
region = Rect2(2048, 1024, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nxt"]
atlas = ExtResource("2_sweqy")
region = Rect2(4096, 1024, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym00c"]
atlas = ExtResource("2_sweqy")
region = Rect2(6144, 1024, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee2o4"]
atlas = ExtResource("2_sweqy")
region = Rect2(0, 2048, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_vie4p"]
atlas = ExtResource("2_sweqy")
region = Rect2(2048, 2048, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jj5r"]
atlas = ExtResource("2_sweqy")
region = Rect2(4096, 2048, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hmo1"]
atlas = ExtResource("7_ivps1")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_uygay"]
atlas = ExtResource("7_ivps1")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("1_4flbx")
region = Rect2(481, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_4flbx")
region = Rect2(962, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_4flbx")
region = Rect2(1443, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_4flbx")
region = Rect2(1924, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_4flbx")
region = Rect2(2405, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_4flbx")
region = Rect2(2886, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_4flbx")
region = Rect2(3367, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("1_4flbx")
region = Rect2(3848, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("1_4flbx")
region = Rect2(4329, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("1_4flbx")
region = Rect2(4810, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(5291, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("1_4flbx")
region = Rect2(5772, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("1_4flbx")
region = Rect2(6253, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("1_4flbx")
region = Rect2(6734, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("1_4flbx")
region = Rect2(7215, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("1_4flbx")
region = Rect2(7696, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("1_4flbx")
region = Rect2(8177, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("1_4flbx")
region = Rect2(8658, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("1_4flbx")
region = Rect2(9139, 0, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("1_4flbx")
region = Rect2(481, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("1_4flbx")
region = Rect2(962, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("1_4flbx")
region = Rect2(1443, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("1_4flbx")
region = Rect2(1924, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("1_4flbx")
region = Rect2(2405, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("1_4flbx")
region = Rect2(2886, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("1_4flbx")
region = Rect2(3367, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("1_4flbx")
region = Rect2(3848, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("1_4flbx")
region = Rect2(4329, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("1_4flbx")
region = Rect2(4810, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("1_4flbx")
region = Rect2(5291, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("1_4flbx")
region = Rect2(5772, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("1_4flbx")
region = Rect2(6253, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("1_4flbx")
region = Rect2(6734, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("1_4flbx")
region = Rect2(7215, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("1_4flbx")
region = Rect2(7696, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("1_4flbx")
region = Rect2(8177, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("1_4flbx")
region = Rect2(8658, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("1_4flbx")
region = Rect2(9139, 724, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("1_4flbx")
region = Rect2(481, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("1_4flbx")
region = Rect2(962, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("1_4flbx")
region = Rect2(1443, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("1_4flbx")
region = Rect2(1924, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("1_4flbx")
region = Rect2(2405, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("1_4flbx")
region = Rect2(2886, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("1_4flbx")
region = Rect2(3367, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("1_4flbx")
region = Rect2(3848, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("1_4flbx")
region = Rect2(4329, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("1_4flbx")
region = Rect2(4810, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("1_4flbx")
region = Rect2(5291, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("1_4flbx")
region = Rect2(5772, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oay"]
atlas = ExtResource("1_4flbx")
region = Rect2(6253, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uyv"]
atlas = ExtResource("1_4flbx")
region = Rect2(6734, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8ou"]
atlas = ExtResource("1_4flbx")
region = Rect2(7215, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbnx"]
atlas = ExtResource("1_4flbx")
region = Rect2(7696, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(8177, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lcn"]
atlas = ExtResource("1_4flbx")
region = Rect2(8658, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_xry5e"]
atlas = ExtResource("1_4flbx")
region = Rect2(9139, 1448, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6w8y"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 2172, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_yem3p"]
atlas = ExtResource("1_4flbx")
region = Rect2(481, 2172, 481, 724)

[sub_resource type="AtlasTexture" id="AtlasTexture_qicb8"]
atlas = ExtResource("6_nvl01")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o2m3"]
atlas = ExtResource("6_nvl01")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpay4"]
atlas = ExtResource("6_nvl01")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfa3h"]
atlas = ExtResource("6_nvl01")
region = Rect2(1024, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_77e46"]
atlas = ExtResource("2_sweqy")
region = Rect2(0, 0, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy2ki"]
atlas = ExtResource("2_sweqy")
region = Rect2(2048, 0, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_04cqw"]
atlas = ExtResource("2_sweqy")
region = Rect2(4096, 0, 2048, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_vihdy"]
atlas = ExtResource("4_2hs0m")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c55y"]
atlas = ExtResource("4_2hs0m")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoal8"]
atlas = ExtResource("4_2hs0m")
region = Rect2(2048, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_htija"]
atlas = ExtResource("4_2hs0m")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_he65s"]
atlas = ExtResource("4_2hs0m")
region = Rect2(1024, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0yt3"]
atlas = ExtResource("4_2hs0m")
region = Rect2(2048, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_uckl6"]
atlas = ExtResource("4_2hs0m")
region = Rect2(0, 2048, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_86rna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86rna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg1a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob4mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax26h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh4g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgmjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va2xi")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ihbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc53x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro7of")
}],
"loop": false,
"name": &"damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn2kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tmhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpvxe")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkf2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7jk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feeoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym00c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee2o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vie4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jj5r")
}],
"loop": false,
"name": &"execute",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hmo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uygay")
}],
"loop": false,
"name": &"fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xry5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6w8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yem3p")
}],
"loop": true,
"name": &"idle",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qicb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o2m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpay4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfa3h")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77e46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy2ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04cqw")
}],
"loop": false,
"name": &"prepare",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vihdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c55y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoal8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htija")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he65s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0yt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uckl6")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(12.5333, 21.6667)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n7ghd"]
radius = 57.0
height = 364.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 3
script = ExtResource("1_sweqy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_86rna")
animation = &"damaged"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, -22.5)
scale = Vector2(15, 15)
shape = SubResource("RectangleShape2D_hqtel")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(229, -28)
zoom = Vector2(1.5, 1.5)

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_n7ghd")
volume_db = -25.0

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(209, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CapsuleShape2D_n7ghd")

[node name="TakedownLabel" type="Label" parent="."]
visible = false
offset_left = -207.0
offset_top = -244.0
offset_right = 275.0
offset_bottom = -209.0
theme_override_fonts/font = ExtResource("11_nvl01")
theme_override_font_sizes/font_size = 30
text = "Press F for Takedown"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
